--- a/wp-content/themes/norcal-sbdc-ip/assets/src/scss/imports/_template.scss
+++ b/wp-content/themes/norcal-sbdc-ip/assets/src/scss/imports/_template.scss
@@ -672,3 +672,10 @@
 		padding: calc(0.8rem - (3px - 1px)) calc(1.3rem - (3px - 1px));
 	}
 }
+
+
+body.single-event {
+	#main {
+		background-color: #efefef;
+	}
+}
