--- a/wp-content/themes/norcal-sbdc-ip/assets/css/style.css
+++ b/wp-content/themes/norcal-sbdc-ip/assets/css/style.css
@@ -32418,91 +32418,28 @@ blockquote,
       left: calc(50% - (2.75rem / 2));
       top: calc(50% - (2.75rem / 2)); }
 
-.wp-block-crown-blocks-post-header {
-  margin-bottom: 12rem; }
-  @media (min-width: 768px) {
-    .wp-block-crown-blocks-post-header {
-      margin-bottom: 8rem; } }
-  @media (min-width: 992px) {
-    .wp-block-crown-blocks-post-header {
-      margin-bottom: 10rem; } }
-  .wp-block-crown-blocks-post-header > .inner > .header-contents {
-    margin-bottom: -12rem; }
-    @media (min-width: 768px) {
-      .wp-block-crown-blocks-post-header > .inner > .header-contents {
-        margin-bottom: -8rem; } }
-    @media (min-width: 992px) {
-      .wp-block-crown-blocks-post-header > .inner > .header-contents {
-        margin-bottom: -10rem; } }
-  .wp-block-crown-blocks-post-header .entry-categories {
-    background-color: #363d4f;
-    padding: 1rem;
-    padding-bottom: 0;
-    margin-bottom: 0; }
-    @media (min-width: 992px) {
-      .wp-block-crown-blocks-post-header .entry-categories {
-        padding: 2rem;
-        padding-bottom: 0; } }
-    @media (min-width: 1200px) {
-      .wp-block-crown-blocks-post-header .entry-categories {
-        margin-left: -2rem;
-        margin-right: -2rem; } }
-    .wp-block-crown-blocks-post-header .entry-categories .category {
-      border-radius: 0;
-      border-color: #fff;
-      color: #fff; }
-      .wp-block-crown-blocks-post-header .entry-categories .category:hover {
-        background-color: transparent;
-        border-color: #fff; }
-  .wp-block-crown-blocks-post-header .entry-title {
-    background-color: #363d4f;
-    padding: 1rem;
-    padding-top: .5rem;
-    color: #ffffff; }
-    @media (min-width: 992px) {
-      .wp-block-crown-blocks-post-header .entry-title {
-        padding: 2rem;
-        padding-top: 1rem; } }
-    @media (min-width: 1200px) {
-      .wp-block-crown-blocks-post-header .entry-title {
-        margin-left: -2rem;
-        margin-right: -2rem; } }
-  .wp-block-crown-blocks-post-header .header-meta {
-    border-top: none;
-    padding-top: 0; }
-    .wp-block-crown-blocks-post-header .header-meta .entry-date {
-      font-size: 1.25rem;
-      color: #343a40; }
-    .wp-block-crown-blocks-post-header .header-meta .social-sharing-links {
-      margin-right: 0;
-      color: #343a40; }
-      .wp-block-crown-blocks-post-header .header-meta .social-sharing-links h4 {
-        font-size: 1rem;
-        text-transform: uppercase;
-        letter-spacing: .1em;
-        font-weight: 700; }
-      .wp-block-crown-blocks-post-header .header-meta .social-sharing-links .menu-item a {
-        border-color: #343a40; }
-        .wp-block-crown-blocks-post-header .header-meta .social-sharing-links .menu-item a .icon svg {
-          fill: #343a40; }
-    .wp-block-crown-blocks-post-header .header-meta .subscribe-button {
-      display: none; }
-
+.wp-block-crown-blocks-post-header,
 .wp-block-crown-blocks-event-header {
   color: #fff; }
+  .wp-block-crown-blocks-post-header > .header-bg,
   .wp-block-crown-blocks-event-header > .header-bg {
     background-image: none;
     background-color: #363d4f; }
+    .wp-block-crown-blocks-post-header > .header-bg .bg-image,
     .wp-block-crown-blocks-event-header > .header-bg .bg-image {
       mix-blend-mode: normal;
       opacity: .25; }
+  .wp-block-crown-blocks-post-header > .inner > .header-contents > .inner,
   .wp-block-crown-blocks-event-header > .inner > .header-contents > .inner {
     display: block; }
   @media (min-width: 992px) {
+    .wp-block-crown-blocks-post-header > .inner > .header-contents .title-container,
     .wp-block-crown-blocks-event-header > .inner > .header-contents .title-container {
       width: 66.666667%; } }
+  .wp-block-crown-blocks-post-header > .inner > .header-contents .entry-labels,
   .wp-block-crown-blocks-event-header > .inner > .header-contents .entry-labels {
     margin-bottom: 0.5rem; }
+    .wp-block-crown-blocks-post-header > .inner > .header-contents .entry-labels span,
     .wp-block-crown-blocks-event-header > .inner > .header-contents .entry-labels span {
       text-transform: uppercase;
       letter-spacing: .1em;
@@ -32512,19 +32449,27 @@ blockquote,
       color: #343a40;
       font-size: 1rem;
       padding: .25rem .75rem; }
+  .wp-block-crown-blocks-post-header > .inner > .header-contents .entry-title,
   .wp-block-crown-blocks-event-header > .inner > .header-contents .entry-title {
     font-weight: 700;
     color: #ffffff;
     margin-bottom: 2rem; }
     @media (min-width: 768px) {
+      .wp-block-crown-blocks-post-header > .inner > .header-contents .entry-title,
       .wp-block-crown-blocks-event-header > .inner > .header-contents .entry-title {
         margin-bottom: 3rem; } }
     @media (min-width: 992px) {
+      .wp-block-crown-blocks-post-header > .inner > .header-contents .entry-title,
       .wp-block-crown-blocks-event-header > .inner > .header-contents .entry-title {
         font-size: 3.5rem; } }
   @media (min-width: 768px) {
+    .wp-block-crown-blocks-post-header > .inner > .header-contents .entry-event-date,
     .wp-block-crown-blocks-event-header > .inner > .header-contents .entry-event-date {
       margin-bottom: 2rem; } }
+  .wp-block-crown-blocks-post-header > .inner > .header-contents .entry-event-date .month,
+  .wp-block-crown-blocks-post-header > .inner > .header-contents .entry-event-date .date,
+  .wp-block-crown-blocks-post-header > .inner > .header-contents .entry-event-date .year,
+  .wp-block-crown-blocks-post-header > .inner > .header-contents .entry-event-date .time,
   .wp-block-crown-blocks-event-header > .inner > .header-contents .entry-event-date .month,
   .wp-block-crown-blocks-event-header > .inner > .header-contents .entry-event-date .date,
   .wp-block-crown-blocks-event-header > .inner > .header-contents .entry-event-date .year,
@@ -32536,20 +32481,25 @@ blockquote,
     font-style: normal;
     font-family: inherit;
     text-transform: none; }
+  .wp-block-crown-blocks-post-header > .inner > .header-contents .entry-event-date .time,
   .wp-block-crown-blocks-event-header > .inner > .header-contents .entry-event-date .time {
     display: inline; }
+    .wp-block-crown-blocks-post-header > .inner > .header-contents .entry-event-date .time::before,
     .wp-block-crown-blocks-event-header > .inner > .header-contents .entry-event-date .time::before {
       content: ' | ';
       opacity: .5; }
+  .wp-block-crown-blocks-post-header > .inner > .header-contents .header-footer,
   .wp-block-crown-blocks-event-header > .inner > .header-contents .header-footer {
     border-top: 1px solid #fff;
     padding-top: 1rem;
     padding-bottom: 1rem; }
     @media (min-width: 768px) {
+      .wp-block-crown-blocks-post-header > .inner > .header-contents .header-footer,
       .wp-block-crown-blocks-event-header > .inner > .header-contents .header-footer {
         padding-top: 2rem;
         padding-bottom: 2rem; } }
     @media (min-width: 768px) {
+      .wp-block-crown-blocks-post-header > .inner > .header-contents .header-footer > .inner,
       .wp-block-crown-blocks-event-header > .inner > .header-contents .header-footer > .inner {
         display: -webkit-box;
         display: -ms-flexbox;
@@ -32557,18 +32507,35 @@ blockquote,
         -webkit-box-align: center;
             -ms-flex-align: center;
                 align-items: center; } }
+  .wp-block-crown-blocks-post-header > .inner > .header-contents .social-sharing-links,
   .wp-block-crown-blocks-event-header > .inner > .header-contents .social-sharing-links {
     margin-left: 0;
     margin-right: 0; }
     @media (min-width: 768px) {
+      .wp-block-crown-blocks-post-header > .inner > .header-contents .social-sharing-links,
       .wp-block-crown-blocks-event-header > .inner > .header-contents .social-sharing-links {
         margin-bottom: 0;
         -webkit-box-flex: 1;
             -ms-flex: 1 1 auto;
                 flex: 1 1 auto; } }
+    .wp-block-crown-blocks-post-header > .inner > .header-contents .social-sharing-links h4,
+    .wp-block-crown-blocks-event-header > .inner > .header-contents .social-sharing-links h4 {
+      line-height: 1.2;
+      font-size: 0.75rem;
+      font-weight: 700;
+      margin-bottom: 0.5rem;
+      text-transform: uppercase;
+      letter-spacing: .05em; }
+      @media (min-width: 768px) {
+        .wp-block-crown-blocks-post-header > .inner > .header-contents .social-sharing-links h4,
+        .wp-block-crown-blocks-event-header > .inner > .header-contents .social-sharing-links h4 {
+          margin-bottom: 0;
+          margin-right: 1rem; } }
+  .wp-block-crown-blocks-post-header > .inner > .header-contents .additional-links,
   .wp-block-crown-blocks-event-header > .inner > .header-contents .additional-links {
     margin-top: 1rem; }
     @media (min-width: 768px) {
+      .wp-block-crown-blocks-post-header > .inner > .header-contents .additional-links,
       .wp-block-crown-blocks-event-header > .inner > .header-contents .additional-links {
         display: -webkit-box;
         display: -ms-flexbox;
@@ -32578,8 +32545,10 @@ blockquote,
             -ms-flex-align: center;
                 align-items: center; } }
     @media (min-width: 768px) {
+      .wp-block-crown-blocks-post-header > .inner > .header-contents .additional-links .link,
       .wp-block-crown-blocks-event-header > .inner > .header-contents .additional-links .link {
         margin-left: 2rem; } }
+    .wp-block-crown-blocks-post-header > .inner > .header-contents .additional-links .return-to-index,
     .wp-block-crown-blocks-event-header > .inner > .header-contents .additional-links .return-to-index {
       font-weight: inherit;
       text-transform: none;
@@ -32588,17 +32557,33 @@ blockquote,
       font-size: inherit;
       text-decoration: underline;
       margin-top: 0; }
+      .wp-block-crown-blocks-post-header > .inner > .header-contents .additional-links .return-to-index::before,
       .wp-block-crown-blocks-event-header > .inner > .header-contents .additional-links .return-to-index::before {
         display: none; }
+    .wp-block-crown-blocks-post-header > .inner > .header-contents .additional-links .add-to-calendar,
     .wp-block-crown-blocks-event-header > .inner > .header-contents .additional-links .add-to-calendar {
       color: #fff;
       opacity: .7;
       -webkit-transition: opacity .15s;
       transition: opacity .15s; }
+      .wp-block-crown-blocks-post-header > .inner > .header-contents .additional-links .add-to-calendar:hover,
       .wp-block-crown-blocks-event-header > .inner > .header-contents .additional-links .add-to-calendar:hover {
         opacity: 1; }
+      .wp-block-crown-blocks-post-header > .inner > .header-contents .additional-links .add-to-calendar::before,
       .wp-block-crown-blocks-event-header > .inner > .header-contents .additional-links .add-to-calendar::before {
         content: '+ '; }
+
+.wp-block-crown-blocks-post-header > .inner > .header-contents {
+  padding-bottom: 2rem; }
+  .wp-block-crown-blocks-post-header > .inner > .header-contents > .inner {
+    max-width: 1260px; }
+  .wp-block-crown-blocks-post-header > .inner > .header-contents .entry-title {
+    margin-bottom: 2rem; }
+  .wp-block-crown-blocks-post-header > .inner > .header-contents .entry-date {
+    font-size: 1.25rem;
+    margin-right: 0; }
+  .wp-block-crown-blocks-post-header > .inner > .header-contents .header-footer {
+    padding-bottom: 0; }
 
 #page,
 #mobile-menu > .scrollable {
