--- a/wp-content/themes/norcal-sbdc-ip/assets/css/editor-style.css
+++ b/wp-content/themes/norcal-sbdc-ip/assets/css/editor-style.css
@@ -26741,6 +26741,35 @@ nav.pagination {
   .text-color-dark .wp-block-crown-blocks-featured-events.configuration-slider .post-feed > .inner article.event:after {
     background-color: #032040; }
 
+/*	Post Event Index
+---------------------------------------------------------*/
+.wp-block-crown-blocks-post-event-index .post-feed > .inner > article > a:hover .entry-link::before {
+  right: -.5rem; }
+
+.wp-block-crown-blocks-post-event-index .post-feed > .inner > article > a > .inner {
+  background-color: #eef5ff; }
+
+.wp-block-crown-blocks-post-event-index .post-feed > .inner > article .entry-link {
+  position: relative;
+  height: 1.5rem; }
+  .wp-block-crown-blocks-post-event-index .post-feed > .inner > article .entry-link::before {
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    display: inline-block;
+    font-style: normal;
+    font-variant: normal;
+    font-weight: normal;
+    line-height: 1;
+    font-family: icomoon;
+    content: "";
+    position: absolute;
+    display: block;
+    font-size: 1.5rem;
+    right: 0rem;
+    bottom: 0;
+    -webkit-transition: right .2s ease-out, opacity .2s;
+    transition: right .2s ease-out, opacity .2s; }
+
 .gform_wrapper {
   margin-bottom: 1rem;
   text-align: left; }
@@ -28281,6 +28310,16 @@ blockquote,
         -ms-transform: none;
             transform: none; }
 
+.entry-event-date .month {
+  text-transform: uppercase; }
+
+.entry-event-date .date {
+  font-style: normal;
+  font-weight: 700; }
+
+.entry-event-date .time {
+  letter-spacing: 0; }
+
 .text-color-light .simple-subscribe-form_wrapper input[type=text],
 .text-color-light .simple-subscribe-form_wrapper input[type=email] {
   -webkit-box-shadow: inset 0 -2px #fff;
@@ -28842,6 +28881,18 @@ blockquote,
         left: calc(50% - (2.75rem / 2));
         top: calc(50% - (2.75rem / 2)); }
 
+.wp-block-crown-blocks-post-event-index .post-feed > .inner > article > a.color-primary > .inner {
+  background-color: #eef5ff; }
+
+.wp-block-crown-blocks-post-event-index .post-feed > .inner > article > a.color-secondary > .inner {
+  background-color: #a7d0ed; }
+
+.wp-block-crown-blocks-post-event-index .post-feed > .inner > article > a.color-tertiary > .inner {
+  background-color: #ddd7ca; }
+
+.wp-block-crown-blocks-post-event-index .post-feed > .inner > article > a > .inner {
+  background-color: #eef5ff; }
+
 .content-slider {
   padding-right: 6rem;
   position: relative; }
@@ -29127,6 +29178,173 @@ blockquote,
       height: 2.75rem;
       left: calc(50% - (2.75rem / 2));
       top: calc(50% - (2.75rem / 2)); }
+
+.wp-block-crown-blocks-post-header,
+.wp-block-crown-blocks-event-header {
+  color: #fff; }
+  .wp-block-crown-blocks-post-header > .header-bg,
+  .wp-block-crown-blocks-event-header > .header-bg {
+    background-image: none;
+    background-color: #363d4f; }
+    .wp-block-crown-blocks-post-header > .header-bg .bg-image,
+    .wp-block-crown-blocks-event-header > .header-bg .bg-image {
+      mix-blend-mode: normal;
+      opacity: .25; }
+  .wp-block-crown-blocks-post-header > .inner > .header-contents > .inner,
+  .wp-block-crown-blocks-event-header > .inner > .header-contents > .inner {
+    display: block; }
+  @media (min-width: 992px) {
+    .wp-block-crown-blocks-post-header > .inner > .header-contents .title-container,
+    .wp-block-crown-blocks-event-header > .inner > .header-contents .title-container {
+      width: 66.666667%; } }
+  .wp-block-crown-blocks-post-header > .inner > .header-contents .entry-labels,
+  .wp-block-crown-blocks-event-header > .inner > .header-contents .entry-labels {
+    margin-bottom: 0.5rem; }
+    .wp-block-crown-blocks-post-header > .inner > .header-contents .entry-labels span,
+    .wp-block-crown-blocks-event-header > .inner > .header-contents .entry-labels span {
+      text-transform: uppercase;
+      letter-spacing: .1em;
+      font-weight: 700;
+      display: inline-block;
+      background-color: #dceaff;
+      color: #343a40;
+      font-size: 1rem;
+      padding: .25rem .75rem; }
+  .wp-block-crown-blocks-post-header > .inner > .header-contents .entry-title,
+  .wp-block-crown-blocks-event-header > .inner > .header-contents .entry-title {
+    font-weight: 700;
+    color: #ffffff;
+    margin-bottom: 2rem; }
+    @media (min-width: 768px) {
+      .wp-block-crown-blocks-post-header > .inner > .header-contents .entry-title,
+      .wp-block-crown-blocks-event-header > .inner > .header-contents .entry-title {
+        margin-bottom: 3rem; } }
+    @media (min-width: 992px) {
+      .wp-block-crown-blocks-post-header > .inner > .header-contents .entry-title,
+      .wp-block-crown-blocks-event-header > .inner > .header-contents .entry-title {
+        font-size: 3.5rem; } }
+  @media (min-width: 768px) {
+    .wp-block-crown-blocks-post-header > .inner > .header-contents .entry-event-date,
+    .wp-block-crown-blocks-event-header > .inner > .header-contents .entry-event-date {
+      margin-bottom: 2rem; } }
+  .wp-block-crown-blocks-post-header > .inner > .header-contents .entry-event-date .month,
+  .wp-block-crown-blocks-post-header > .inner > .header-contents .entry-event-date .date,
+  .wp-block-crown-blocks-post-header > .inner > .header-contents .entry-event-date .year,
+  .wp-block-crown-blocks-post-header > .inner > .header-contents .entry-event-date .time,
+  .wp-block-crown-blocks-event-header > .inner > .header-contents .entry-event-date .month,
+  .wp-block-crown-blocks-event-header > .inner > .header-contents .entry-event-date .date,
+  .wp-block-crown-blocks-event-header > .inner > .header-contents .entry-event-date .year,
+  .wp-block-crown-blocks-event-header > .inner > .header-contents .entry-event-date .time {
+    display: inline;
+    font-size: 1.5rem;
+    line-height: 1.4;
+    font-weight: 400;
+    font-style: normal;
+    font-family: inherit;
+    text-transform: none; }
+  .wp-block-crown-blocks-post-header > .inner > .header-contents .entry-event-date .time,
+  .wp-block-crown-blocks-event-header > .inner > .header-contents .entry-event-date .time {
+    display: inline; }
+    .wp-block-crown-blocks-post-header > .inner > .header-contents .entry-event-date .time::before,
+    .wp-block-crown-blocks-event-header > .inner > .header-contents .entry-event-date .time::before {
+      content: ' | ';
+      opacity: .5; }
+  .wp-block-crown-blocks-post-header > .inner > .header-contents .header-footer,
+  .wp-block-crown-blocks-event-header > .inner > .header-contents .header-footer {
+    border-top: 1px solid #fff;
+    padding-top: 1rem;
+    padding-bottom: 1rem; }
+    @media (min-width: 768px) {
+      .wp-block-crown-blocks-post-header > .inner > .header-contents .header-footer,
+      .wp-block-crown-blocks-event-header > .inner > .header-contents .header-footer {
+        padding-top: 2rem;
+        padding-bottom: 2rem; } }
+    @media (min-width: 768px) {
+      .wp-block-crown-blocks-post-header > .inner > .header-contents .header-footer > .inner,
+      .wp-block-crown-blocks-event-header > .inner > .header-contents .header-footer > .inner {
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: flex;
+        -webkit-box-align: center;
+            -ms-flex-align: center;
+                align-items: center; } }
+  .wp-block-crown-blocks-post-header > .inner > .header-contents .social-sharing-links,
+  .wp-block-crown-blocks-event-header > .inner > .header-contents .social-sharing-links {
+    margin-left: 0;
+    margin-right: 0; }
+    @media (min-width: 768px) {
+      .wp-block-crown-blocks-post-header > .inner > .header-contents .social-sharing-links,
+      .wp-block-crown-blocks-event-header > .inner > .header-contents .social-sharing-links {
+        margin-bottom: 0;
+        -webkit-box-flex: 1;
+            -ms-flex: 1 1 auto;
+                flex: 1 1 auto; } }
+    .wp-block-crown-blocks-post-header > .inner > .header-contents .social-sharing-links h4,
+    .wp-block-crown-blocks-event-header > .inner > .header-contents .social-sharing-links h4 {
+      line-height: 1.2;
+      font-size: 0.75rem;
+      font-weight: 700;
+      margin-bottom: 0.5rem;
+      text-transform: uppercase;
+      letter-spacing: .05em; }
+      @media (min-width: 768px) {
+        .wp-block-crown-blocks-post-header > .inner > .header-contents .social-sharing-links h4,
+        .wp-block-crown-blocks-event-header > .inner > .header-contents .social-sharing-links h4 {
+          margin-bottom: 0;
+          margin-right: 1rem; } }
+  .wp-block-crown-blocks-post-header > .inner > .header-contents .additional-links,
+  .wp-block-crown-blocks-event-header > .inner > .header-contents .additional-links {
+    margin-top: 1rem; }
+    @media (min-width: 768px) {
+      .wp-block-crown-blocks-post-header > .inner > .header-contents .additional-links,
+      .wp-block-crown-blocks-event-header > .inner > .header-contents .additional-links {
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: flex;
+        margin-top: 0;
+        -webkit-box-align: center;
+            -ms-flex-align: center;
+                align-items: center; } }
+    @media (min-width: 768px) {
+      .wp-block-crown-blocks-post-header > .inner > .header-contents .additional-links .link,
+      .wp-block-crown-blocks-event-header > .inner > .header-contents .additional-links .link {
+        margin-left: 2rem; } }
+    .wp-block-crown-blocks-post-header > .inner > .header-contents .additional-links .return-to-index,
+    .wp-block-crown-blocks-event-header > .inner > .header-contents .additional-links .return-to-index {
+      font-weight: inherit;
+      text-transform: none;
+      letter-spacing: 0;
+      line-height: inherit;
+      font-size: inherit;
+      text-decoration: underline;
+      margin-top: 0; }
+      .wp-block-crown-blocks-post-header > .inner > .header-contents .additional-links .return-to-index::before,
+      .wp-block-crown-blocks-event-header > .inner > .header-contents .additional-links .return-to-index::before {
+        display: none; }
+    .wp-block-crown-blocks-post-header > .inner > .header-contents .additional-links .add-to-calendar,
+    .wp-block-crown-blocks-event-header > .inner > .header-contents .additional-links .add-to-calendar {
+      color: #fff;
+      opacity: .7;
+      -webkit-transition: opacity .15s;
+      transition: opacity .15s; }
+      .wp-block-crown-blocks-post-header > .inner > .header-contents .additional-links .add-to-calendar:hover,
+      .wp-block-crown-blocks-event-header > .inner > .header-contents .additional-links .add-to-calendar:hover {
+        opacity: 1; }
+      .wp-block-crown-blocks-post-header > .inner > .header-contents .additional-links .add-to-calendar::before,
+      .wp-block-crown-blocks-event-header > .inner > .header-contents .additional-links .add-to-calendar::before {
+        content: '+ '; }
+
+.wp-block-crown-blocks-post-header > .inner > .header-contents {
+  padding-bottom: 2rem; }
+  .wp-block-crown-blocks-post-header > .inner > .header-contents > .inner {
+    max-width: 1260px; }
+  .wp-block-crown-blocks-post-header > .inner > .header-contents .entry-title {
+    margin-bottom: 2rem; }
+  .wp-block-crown-blocks-post-header > .inner > .header-contents .entry-date {
+    font-size: 1.25rem;
+    margin-right: 0; }
+  .wp-block-crown-blocks-post-header > .inner > .header-contents .header-footer {
+    padding-bottom: 0; }
 
 .wp-block[data-type="crown-blocks/header"] > .crown-block-editor-container > .wp-block-crown-blocks-header > hr {
   height: 1.25rem; }
