--- a/wp-content/themes/norcal-sbdc-ip/assets/src/scss/imports/_common.scss
+++ b/wp-content/themes/norcal-sbdc-ip/assets/src/scss/imports/_common.scss
@@ -298,42 +298,63 @@ blockquote,
 .wp-block-crown-blocks-champion-finder,
 .wp-block-crown-blocks-champion-zip-search {
 	.location-search-form {
+		@include media-breakpoint-up(lg) {
+			margin-top: 4rem;
+		}
+		@include media-breakpoint-up(xl) {
+			margin-top: 6rem;
+		}
+		.field::before {
+			opacity: .5;
+		}
 		input[type=text] {
-			font-family: $font-family-mono;
+			box-shadow: inset 0 -2px $gold;
 		}
 		.form-footer {
 			button[type=submit] {
-				&:before {
-					content: '';
-					background-image: escape-svg(url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="#{$bright-blue}" class="bi bi-chevron-right" viewBox="0 0 16 16"><path fill-rule="evenodd" d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z"/></svg>'));
-					background-size: 1.5rem;
-					background-position: center;
-					background-repeat: no-repeat;
-				}
-				&:after {
-					color: $bright-blue;
-				}
+				background-color: $gold;
+				border-color: $gold;
 			}
 		}
 	}
 	.results {
 		.champion {
-			font-family: $font-family-mono;
-			line-height: 1.1;
-			&.active {
-				.email a {
-					color: $bright-blue;
-					&:hover {
-						color: lighten($bright-blue, 15%);
-					}
+			background-color: rgba($dark-blue, .25);
+			a {
+				color: inherit;
+				&:hover {
+					color: $blue;
 				}
 			}
-			h4 {
-				font-weight: 500;
+			.details {
+				padding: 1rem;
+				padding-left: 0;
+				@media (min-width: 768px) {
+					padding: 1.5rem;
+					padding-left: 0;
+				}
+				@media (min-width: 992px) {
+					min-height: 4rem;
+					padding: 1rem;
+					padding-left: 0;
+				}
+				@media (min-width: 1200px) {
+					padding: 1.5rem;
+					padding-left: 0;
+				}
 			}
-			.email a {
-				color: rgba($bright-blue, .75);
-				text-decoration: underline;
+			.name {
+				text-transform: uppercase;
+				font-weight: 700;
+				margin-bottom: 1rem;
+			}
+			.email {
+				white-space: nowrap;
+				overflow: hidden;
+				text-overflow: ellipsis;
+			}
+			.contact {
+				margin-top: 1rem;
 			}
 		}
 	}
