Adjusting map positioning

--- a/wp-content/plugins/crown-blocks/src/block-champion-finder/style.scss
+++ b/wp-content/plugins/crown-blocks/src/block-champion-finder/style.scss
@@ -353,7 +353,7 @@
 		}
 		> .inner {
 			position: relative;
-			padding-top: percentage(3 / 4);
+			padding-top: percentage(1);
 		}
 		.google-map {
 			position: absolute;
