Adding google reviews to footer

--- a/wp-content/themes/norcal-sbdc/assets/css/style.css
+++ b/wp-content/themes/norcal-sbdc/assets/css/style.css
@@ -27283,6 +27283,37 @@ body {
     height: 3rem;
     fill: rgba(91, 109, 128, 0.5); }
 
+#footer .google-reviews-link {
+  width: 271px;
+  height: 126px;
+  position: relative;
+  margin: 1rem auto; }
+  #footer .google-reviews-link:hover::before {
+    opacity: 0; }
+  #footer .google-reviews-link:hover::after {
+    opacity: 1; }
+  #footer .google-reviews-link::before, #footer .google-reviews-link::after {
+    content: '';
+    display: block;
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: contain;
+    -webkit-transition: opacity .2s;
+    transition: opacity .2s; }
+  #footer .google-reviews-link::before {
+    opacity: 1;
+    background-image: url(../img/logos/google-review.png); }
+  #footer .google-reviews-link::after {
+    background-image: url(../img/logos/google-review-active.png); }
+  #footer .google-reviews-link > .inner {
+    display: none; }
+
 /*	Footer CTA Links
 ---------------------------------------------------------*/
 #footer-primary-cta-links {
