--- a/wp-content/themes/norcal-sbdc/assets/css/style.css
+++ b/wp-content/themes/norcal-sbdc/assets/css/style.css
@@ -27287,7 +27287,12 @@ body {
   width: 271px;
   height: 126px;
   position: relative;
-  margin: 1rem auto; }
+  margin-top: 1rem;
+  display: block; }
+  @media (min-width: 992px) {
+    #footer .google-reviews-link {
+      margin-left: auto;
+      margin-right: auto; } }
   #footer .google-reviews-link:hover::before {
     opacity: 0; }
   #footer .google-reviews-link:hover::after {
