--- a/wp-content/themes/norcal-sbdc/assets/src/scss/site/_footer.scss
+++ b/wp-content/themes/norcal-sbdc/assets/src/scss/site/_footer.scss
@@ -416,7 +416,12 @@ body {
 	width: 271px;
 	height: 126px;
 	position: relative;
-	margin: 1rem auto;
+	margin-top: 1rem;
+	display: block;
+	@include media-breakpoint-up(lg) {
+		margin-left: auto;
+		margin-right: auto;
+	}
 	&:hover {
 		&::before {
 			opacity: 0;
